--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ ol {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
-    border: 4px solid #f44336;
+    border: 4px solid #eb16cf;
     border-left-color: transparent;
   }
   50% {
@@ -269,14 +269,14 @@ ol {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
-    border: 4px solid #f44336;
+    border: 4px solid #eb16cf;
     border-left-color: transparent;
   }
 }
 @-webkit-keyframes loader {
   0% {
     -webkit-transform: rotate(0deg);
-    border: 4px solid #f44336;
+    border: 4px solid #eb16cf;
     border-left-color: transparent;
   }
   50% {
@@ -286,7 +286,7 @@ ol {
   }
   100% {
     -webkit-transform: rotate(360deg);
-    border: 4px solid #f44336;
+    border: 4px solid #eb16cf;
     border-left-color: transparent;
   }
 }
