--- a/dash/scss/bootstrap.scss
+++ b/dash/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #EB1616;
+$primary: #eb16cf;
 $secondary: #191C24;
 $light: #6C7293;
 $dark: #000000;
