--- a/eya+hadil/FruitGame-main/3. Fruits Game (JQuery)/styling.css
+++ b/eya+hadil/FruitGame-main/3. Fruits Game (JQuery)/styling.css
@@ -1,11 +1,9 @@
-html{
+html {
     height: 100%;
-    
 }
 
-#container{
-    background: 
-     linear-gradient(to bottom, #2477ec, #1fcfe7);
+#container {
+    background: linear-gradient(to bottom, #0079cf, #68d7f6);
     height: 680px;
     width: 96%;
     margin: 10px auto;
@@ -14,13 +12,12 @@ html{
     position: relative;
 }
 
-#score{
+#score {
     background-color: #e3e3df;
     color: black;
     padding: 11px;
     position: absolute;
     left: 1200px;
-    
 }
 
 #fruitsContainer {
@@ -38,8 +35,7 @@ html{
     overflow: hidden;
 }
 
-
-#instruction{
+#instruction {
     width: 450px;
     height: 50px;
     background-color: #c7821a;
@@ -51,13 +47,13 @@ html{
     -webkit-box-shadow: 0px 4px #c7821a;
 }
 
-#choices{
+#choices {
     height: 100px;
     width: 450px;
     margin: 5px auto;
 }
 
-.box{
+.box {
     width: 85px;
     height: 85px;
     background-color: white;
@@ -65,9 +61,9 @@ html{
     margin-right: 36px;
     border-radius: 3px;
     cursor: pointer;
-    box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 4px rgba(0,0,0,0.2);
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
     line-height: 80px;
     position: relative;
@@ -78,7 +74,7 @@ html{
     -ms-transition: all 0.2s;
 }
 
-.box:hover, #startreset:hover{
+.box:hover, #startreset:hover {
     background-color: #c7821a;
     color: white;
     box-shadow: 0px 4px #c7821a;
@@ -86,14 +82,14 @@ html{
     -webkit-box-shadow: 0px 4px #c7821a;
 }
 
-.box:active, #startreset:active{
+.box:active, #startreset:active {
     box-shadow: 0px 0px #c7821a;
     -moz-box-shadow: 0px 0px #c7821a;
     -webkit-box-shadow: 0px 0px #c7821a;
     top: 4px;
 }
 
-#box4{
+#box4 {
     margin-right: 0px;
 }
 
@@ -104,9 +100,9 @@ html{
     margin: -8px auto 20px auto; /* Ajustement de la marge pour déplacer le bouton vers le haut */
     border-radius: 3px;
     cursor: pointer;
-    box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 4px rgba(0,0,0,0.2);
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
     text-align: center;
     position: relative;
     transition: all 0.2s;
@@ -116,43 +112,69 @@ html{
     -ms-transition: all 0.2s;
 }
 
-#lifesLeft{
+#lifesLeft {
     width: 80px;
     padding: 10px;
     position: absolute;
     background-color: #e3e3df;
     border-radius: 3px;
-    box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 4px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 4px rgba(0,0,0,0.2);
-/*    visibility: hidden;*/
+    box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+    /*    visibility: hidden;*/
     display: none;
 }
 
-#gameover{
+#gameover {
     width: 450px;
-    height: 210px;
-    background: linear-gradient(#cad5e3, #a7b5b5);
+    height: 250px; /* Augmenter la hauteur pour les boutons */
+    background: linear-gradient(#f3e59a8b, #6ecfcf9f);
     color: rgb(10, 107, 5);
     text-align: center;
     font-size: 200%;
     text-transform: uppercase;
     position: absolute;
     font-family: "Lucida Console";
-    top: 250px;
+    top: 200px; /* Ajuster la position */
     left: 500px;
     z-index: 2;
     display: none;
     border-radius: 4%;
+    padding-top: 20px; /* Ajouter un peu de padding */
 }
 
-.life{
+#gameover p {
+    margin: 5;
+    font-size: 70%; /* Ajuster la taille du texte */
+}
+
+#gameover button {
+    width: 100px;
+    padding: 10px;
+    margin: 20px;
+    background-color: #e9bf37;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#gameover button:hover {
+    background-color: #a56718;
+}
+
+#gameover button:active {
+    background-color: #854512;
+}
+
+.life {
     width: 1em;
     height: 1em;
     margin: 0 5px;
 }
 
-.fruit{
+.fruit {
     display: none;
     position: absolute;
 }
