--- a/eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/css/style.css
+++ b/eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/css/style.css
@@ -76,15 +76,15 @@ h3 {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 70%;
+  width: 90%;
   display: none;
 }
 
 .modal {
   font-family: Raleway;
   text-align: center;
-  background-color: hsla(0, 1%, 34%, 0.95);
-  color: white;
+  background-color: hsla(240, 4%, 64%, 0.775);
+  color: rgb(49, 2, 55);
   font-size: 1em;
   height: 100%;
   padding: 30px;
@@ -102,7 +102,7 @@ h3 {
 }
 
 .end-game-modal span {
-  color: #c13765;
+  color: #14c6ea;
   text-transform: uppercase;
   line-height: 1.5em;
   font-size: 1.3em;
@@ -118,5 +118,5 @@ h3 {
 
 .button-area span:hover {
   cursor: pointer;
-  background-color: hsla(30, 10%, 30%, 0.95);
+  background-color: hsla(320, 74%, 43%, 0.582);
 }
